Closed Bug 1017571 Opened 10 years ago Closed 10 years ago

Scrolling horizontally results in rendering glitches

Categories

(Core :: Graphics, defect)

32 Branch
x86
macOS
defect
Not set
normal

Tracking

()

VERIFIED FIXED
mozilla32

People

(Reporter: mreid, Assigned: gal)

References

Details

Attachments

(3 files, 1 obsolete file)

Attached image tab_bar_glitch.png
For the past few nightly builds, I've seen some rendering glitches while scrolling the tab bar.

If I wait, the glitches disappear after a delay of a few seconds.

Configuration:
Firefox 32.0a1 (2014-05-29) on Retina Macbook Pro, Mac OS X 10.9
I see this too, and it's terrible. I suspect this is more fallout from bug 1012407.
Component: Tabbed Browser → Graphics
Product: Firefox → Core
Looks like there's a similar thing going on with horizontal scrolling of in-page content too.
I made a quick test page here:
http://people.mozilla.org/~mreid/bug1017571/wide.html
I can reproduce this.
Comment 3 I can reproduce. Looks like the 2nd triangle of a quad isn't rendered right.
I am out for the next 8 hours. Will start looking at this when I am back. Not opposed at all to a backout if that fixes this.
I bet bug 1018172 is also related.
See Also: → 1018172
See Also: → 1018305
Summary: Scrolling tab bar results in rendering glitches → Scrolling horizontally results in rendering glitches
Updated bug summary to reflect that it's horizontal scrolling both of the tab bar and content.
Could someone please try with https://hg.mozilla.org/mozilla-central/rev/450878674b08 backed out?
Ok, I can look at this now.
So this goes away for me if I don't try to draw the quads at once with the int(coords.z) trick.
Assignee: nobody → gal
Comment on attachment 8431916 [details] [diff] [review]
Only render 1 quad at a time for now.

Temporary band aid until we come up with a more clever trick.
Attachment #8431916 - Flags: review?(bas)
Attachment #8431916 - Flags: review?(bas) → review+
If this goes green on inbound, can you transplant to central please? This is an active regression.
Keywords: checkin-needed
Attachment #8431916 - Attachment is obsolete: true
Attachment #8432027 - Flags: review?(bas)
Keywords: checkin-needed
Attachment #8432027 - Flags: review?(bas) → review+
https://hg.mozilla.org/mozilla-central/rev/fc91e69c3473
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
This was hitting Linux and ATI drivers as well, according to a comment in bug 1015176. This is good to know. This gives me some confidence that this fix will actually make this work on most GPUs.
Target Milestone: --- → mozilla32
See Also: 1018172
I was seeing this on Linux with an Intel GPU (with layers.acceleration.force-enabled).
I was seeing this bug on a mid-2013 macbook air with ff-nightly. Just updated to 6/3/2014 build and it's not happening anymore that I can tell.
Marking as verified based on the previous 2 comments.
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: