Bug 1017571 - Use TRIANGLES instead of TRIANGLE_STRIP to fix rendering glitchs on MacOSX with uniform array access (r=Bas)